--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./carshop
-        run: npm ci
+        run: npm install
 
       - name: Build
         working-directory: ./carshop
